@@ -477,37 +477,17 @@ bail:
     return -1;
 }
 
-#if defined(LINUX)
-static int stdin_is_reg(void) {
-  struct stat buf;
-
-  if (fstat(STDIN_FILENO, &buf) < 0)
-    bye("fstat(): %s", strerror(errno));
-
-  return S_ISREG(buf.st_mode);
-}
-#endif
-
 int ncat_connect(void)
 {
     nsock_pool mypool;
     int rc;
 
-#if defined(LINUX)
-    /* -- Hack!!
-     * epoll(7) doesn't support regular files (e.g.: ncat < file.c)
-     * If we detect that STDIN is a regular file, then we enforce
-     * the use of the select-based engine. */
-    if (stdin_is_reg())
-      nsock_set_default_engine("select");
-#elif defined(WIN32)
-    /* -- Hack!!
-     * Unconditionally use the select engine on windows.
-     * The poll engine (WSAPoll) is currently unable to handle
-     * read events on stdin.
+    /* Unless explicitely asked not to do so, ncat uses the
+     * fallback nsock engine to maximize compatibility between
+     * operating systems and the different use cases.
      */
-    nsock_set_default_engine("select");
-#endif
+    if (!o.nsock_engine)
+        nsock_set_default_engine("select");
 
     /* Create an nsock pool */
     if ((mypool = nsp_new(NULL)) == NULL)
